<resources>
    <string name="app_name">SenderSMS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="page_title_historial_detail_kardex">Kardex</string>
    <string name="nav_header_desc">descripcion</string>
    <string name="nav_header_title">titulo header</string>
    <string name="nav_header_subtitle">subtitle header</string>
    <string name="menu_home">inicio</string>
    <string name="menu_kardex">kardex</string>
    <string name="menu_campain">campañas</string>
    <string name="menu_logout">cerrar sesión</string>
    <string name="campain_title">Campaña</string>
    <string name="kardex_title">Kardex</string>
    <string name="btn_send_campain">Enviar campaña</string>
    <string name="label_recycler_empty">No se encontraron elementos.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="point_title">Mapa Puntos</string>
    <string name="menu_map_point">Mapa</string>
    <string name="new_kardex_title">Nuevo Kardex</string>
    <string name="detail_kardex_title">Movimientos</string>
    <string name="menu_sell">Catalogo</string>
    <string name="sell_title">Catalogo</string>
    <string name="label_s1_phone_number">Enviaremos un SMS a tu número telefónico</string>
    <string name="label_s2_dni">Ingrese su numero de DNI para validar su información</string>
    <string name="new_detail_kardex_title">Nuevo Movimiento</string>
    <string name="catalogoBayron_title">Catalogo ciente</string>
    <string name="channel_name">CHANNEL_GLOBAL</string>
    <string name="channel_description">Canal global</string>
    <string name="title_store">Tiendas</string>
</resources>