<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kardex"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_kardex" />
        <item
            android:id="@+id/nav_campain"
            android:icon="@drawable/ic_baseline_receipt_24"
            android:title="@string/menu_campain" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_close_24"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>