<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_campain">

    <fragment
        android:id="@+id/nav_campain"
        android:name="com.example.sendersms.CampainFragment"
        android:label="@string/campain_title"
        tools:layout="@layout/fragment_campain">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/nav_kardex" />
    </fragment>
    <fragment
        android:id="@+id/nav_kardex"
        android:name="com.example.sendersms.KardexFragment"
        android:label="@string/kardex_title"
        tools:layout="@layout/fragment_kardex">

        <action
            android:id="@+id/action_kardex_to_point"
            app:destination="@id/nav_campain" />
    </fragment>

    <fragment
        android:id="@+id/nav_point"
        android:name="com.example.sendersms.views.PointOfSaleFragment"
        android:label="@string/point_title"
        tools:layout="@layout/fragment_point_of_sale">
        <action
            android:id="@+id/action_point_to_campain"
            app:destination="@id/nav_campain" />
    </fragment>
</navigation>